objects/Help_Point__c.object
<CustomObject>
    <fields>
        <fullName>Help_By__c</fullName>
        <label>Help By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Help_Points</relationshipLabel>
        <relationshipName>Help_Points</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Help_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Help To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Help_Points (Help To)</relationshipLabel>
        <relationshipName>Help_Points1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Help Point</label>
    <nameField>
        <displayFormat>HP{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Help Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>